--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.8",
     "jquery": "^3.3.1",
+    "sortablejs": "^1.7.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
