--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^3.3.7",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.8",
     "jquery": "^3.3.1",
     "sortablejs": "^1.7.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.2",
+    "vue-happy-scroll": "^2.1.0",
+    "vue-qr": "^1.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
