--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "underscore": "^1.9.1",
     "vue": "^2.5.2",
     "vue-happy-scroll": "^2.1.0",
+    "vue-html-to-paper": "^1.0.3",
     "vue-qr": "^1.5.2",
     "vue-router": "^3.0.1"
   },
