canvas animation commit

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "bootstrap": "^3.3.7",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.8",
+    "emailjs": "^2.2.0",
     "jquery": "^3.3.1",
+    "node-sass": "^4.11.0",
+    "nodemailer": "^5.1.1",
+    "sass-loader": "^7.1.0",
     "sortablejs": "^1.7.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.2",
@@ -43,6 +47,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.9.4",
+    "nodemailer": "^5.1.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
