--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue-happy-scroll": "^2.1.0",
     "vue-html-to-paper": "^1.0.3",
     "vue-qr": "^1.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
