--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.6.0",
     "emailjs": "^2.2.0",
+    "fabric": "^3.3.2",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
     "nodemailer": "^5.1.1",
