--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
+    "css-file-icons": "^0.0.7",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.6.0",
     "emailjs": "^2.2.0",
@@ -21,7 +22,7 @@
     "node-sass": "^4.11.0",
     "nodemailer": "^5.1.1",
     "sass-loader": "^7.1.0",
-    "sortablejs": "^1.7.0",
+    "sortablejs": "^1.9.0",
     "underscore": "^1.9.1",
     "vue": "^2.5.2",
     "vue-happy-scroll": "^2.1.0",
